--- a/dwh.cfg
+++ b/dwh.cfg
@@ -1,8 +1,8 @@
 [CLUSTER]
 HOST='sparkifycluster.cshabnqjdycp.us-west-2.redshift.amazonaws.com'
 DB_NAME='sparkifydb'
-DB_USER='sparkifyuser'
-DB_PASSWORD='sparkifyPassw0rd'
+DB_USER=''
+DB_PASSWORD=''
 DB_PORT=5439
 
 [IAM_ROLE]
